--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-to-print": "^2.14.15",
     "sweetalert2": "^11.10.1",
     "web-vitals": "^2.1.4"
   },
