--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
+    "react-multi-date-picker": "^4.4.1",
     "react-scripts": "5.0.1",
     "react-to-print": "^2.14.15",
     "sweetalert2": "^11.10.1",
