--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "hotel-managment",
   "version": "0.1.0",
+  "homepage": "https://hotel-managment-mu.vercel.app/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
